** "newName :>>" -> set a new name and delete redefinition
** "newName =" -> set a new name and delete feature value
** "newName []" -> set a new name and delete the multiplicity range
** ": newType" -> set a new type
** ":> newType" -> set a new subsetting/subclassification
** ":>> newType" -> set a new redefinition
** "= newValue" -> set a new value
** "[newRange]" -> set a new range

=== New features



== v2024.1.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/52[#52] [services] All `findUsageByName` and `findDefinitionByName` method have been replaced by the new `findByNameAndType` in `org.eclipse.syson.services.UtilService`.
- Delete useless fork of `UploadDocumentEventHandler` & `DocumentController` from Sirius Web.

=== Dependency update

- Switch to Sirius Web 2024.1.1 (Please do not use new Portal representation introduced by this release of Sirius Web, it will be removed in SysON soon (see this ticket in Sirius Web)[https://github.com/eclipse-sirius/sirius-web/issues/3013], when Sirius Web will allow to configure which representations can be used or not in Sirius Web-based applications).
- https://github.com/eclipse-syson/syson/issues/52[#52] [metamodel] SysON SysMLv2 metamodel module now depends on `org.eclipse.emf.ecore.xmi` and `java-uuid-generator`.
- Switch to vite 4.5.2

=== New features

- https://github.com/eclipse-syson/syson/issues/48[#48] [general-view] Display help background message on empty general-view diagram.
- https://github.com/eclipse-syson/syson/issues/52[#52] [syson] Add support for SysMLv2 standard libraries.
Only some KerML libraries have been added:
Base, BooleanFunctions, Clocks, CollectionFunctions, Collections, ComplexFunctions, ControlFunctions, DataFunctions, IntegerFunctions, KerML, Links, NaturalFunctions, NumericalFunctions, RationalFunctions, RealFunctions, ScalarFunctions, ScalarValues, SequenceFunctions, StringFunctions, TrigFunctions, VectorFunctions, VectorValues.