@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2023 Obeo.
+ * Copyright (c) 2023, 2024 Obeo.
  * This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License v2.0
  * which accompanies this distribution, and is available at
@@ -10,14 +10,16 @@
  * Contributors:
  *     Obeo - initial API and implementation
  *******************************************************************************/
-package org.eclipse.syson.diagram.general.view.services;
+package org.eclipse.syson.services;
 
+import org.eclipse.syson.sysml.Definition;
 import org.eclipse.syson.sysml.Element;
 import org.eclipse.syson.sysml.EnumerationDefinition;
+import org.eclipse.syson.sysml.Usage;
 import org.eclipse.syson.sysml.util.SysmlSwitch;
 
 /**
- * Switch called when a new element is created in the General View. Allows to set various attributes/references.
+ * Switch called when a new element is created. Allows to set various attributes/references.
  *
  * @author arichard
  */
@@ -29,8 +31,26 @@ public class ElementInitializerSwitch extends SysmlSwitch<Element> {
     }
 
     @Override
+    public Element caseDefinition(Definition object) {
+        object.setDeclaredName(object.eClass().getName());
+        return object;
+    }
+
+    @Override
     public Element caseEnumerationDefinition(EnumerationDefinition object) {
         object.setIsVariation(true);
+        return object;
+    }
+
+    @Override
+    public Element caseUsage(Usage object) {
+        char[] charArray = object.eClass().getName().toCharArray();
+        charArray[0] = Character.toLowerCase(charArray[0]);
+        String defaultName = new String(charArray);
+        if (defaultName.endsWith("Usage")) {
+            defaultName = defaultName.substring(0, defaultName.length() - 5);
+        }
+        object.setDeclaredName(defaultName);
         return object;
     }
 }
